--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-    "name": "ess-node-server",
+    "name": "nodeserver",
     "version": "1.0.0",
-    "description": "essnode服务重构",
+    "description": "node server",
     "main": "essapp",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "supervisor lib/essapp.js",
         "babel": "npx babel src --out-dir lib --watch"
     },
